// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default with right position and red color 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`handle unexist color with default 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`handle unexist position with default 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`on left position 1`] = `
<div
  className="github-fork-ribbon-wrapper left"
  style={
    Object {
      "height": "150px",
      "left": 0,
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(-45deg)",
        "OTransform": "rotate(-45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(-45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "left": "-43px",
        "msTransform": "rotate(-45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "top": "42px",
        "transform": "rotate(-45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`on left-bottom position 1`] = `
<div
  className="github-fork-ribbon-wrapper left-bottom"
  style={
    Object {
      "bottom": 0,
      "height": "150px",
      "left": 0,
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "fixed",
      "top": "inherit",
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "left": "-43px",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "top": "80px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`on right position 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`on right-bottom position 1`] = `
<div
  className="github-fork-ribbon-wrapper right-bottom"
  style={
    Object {
      "bottom": 0,
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "fixed",
      "right": 0,
      "top": "inherit",
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(-45deg)",
        "OTransform": "rotate(-45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(-45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(-45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "80px",
        "transform": "rotate(-45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`with black color 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#333",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`with green color 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#090",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`with orange color 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#f80",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;

exports[`with red color 1`] = `
<div
  className="github-fork-ribbon-wrapper right"
  style={
    Object {
      "height": "150px",
      "overflow": "hidden",
      "pointerEvents": "none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "width": "150px",
      "zIndex": "9999",
    }
  }
>
  <div
    className="github-fork-ribbon"
    style={
      Object {
        "MozBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "MozTransform": "rotate(45deg)",
        "OTransform": "rotate(45deg)",
        "WebkitBoxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "WebkitTransform": "rotate(45deg)",
        "backgroundColor": "#a00",
        "backgroundImage": "linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))",
        "boxShadow": "0 2px 3px 0 rgba(0, 0, 0, 0.5)",
        "font": "700 13px \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
        "msTransform": "rotate(45deg)",
        "padding": "2px 0",
        "pointerEvents": "auto",
        "position": "absolute",
        "right": "-43px",
        "top": "42px",
        "transform": "rotate(45deg)",
        "zIndex": "9999",
      }
    }
  >
    <a
      href="//www.google.com"
      style={
        Object {
          "borderColor": "rgba(255, 255, 255, 0.7)",
          "borderStyle": "dotted",
          "borderWidth": "1px 0",
          "color": "#fff",
          "display": "inline-block",
          "lineHeight": "20px",
          "padding": "2px 0",
          "textAlign": "center",
          "textDecoration": "none",
          "textShadow": "0 -1px rgba(0, 0, 0, 0.5)",
          "width": "200px",
        }
      }
      target="_blank"
    >
      Fork me on GitHub
    </a>
  </div>
</div>
`;
